--- a/src/App.css
+++ b/src/App.css
@@ -615,6 +615,14 @@ span.space {
         ;
     }
 
+    header {
+        padding: .5rem;
+    }
+
+    .title {
+        font-size: calc(3.5vw + 1em);
+    }
+
     .login-content {
         width: 80vw;
     }
